Fix #111607: Do not unregister internal nodes

Registering a node with a `bl_idname` same as a built-in node will lead
to crash because `rna_Node_unregister` does not check `nt->rna_ext.data`
to see whether it's not null (which indicates whether this node is
registered with python or not). Now fixed.

Pull Request: https://projects.blender.org/blender/blender/pulls/111615